fix: css gap between completed courses

--- a/frontend/src/app/components/user-profile-completed-courses-list/user-profile-completed-courses-list.component.css
+++ b/frontend/src/app/components/user-profile-completed-courses-list/user-profile-completed-courses-list.component.css
@@ -6,3 +6,9 @@
 .miniature {
   width: 200px;
 }
+
+.courses-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
